{
  "version": 4,
  "terraform_version": "1.14.4",
  "serial": 1,
  "lineage": "00000000-0000-4000-8000-000000000000",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-0e81d7e861f596fac",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "4118f4abc479a7",
            "host_resource_group_arn": "arn:aws:module:us-east-1:123456789012:4fe9c88fc4a8",
            "id": "i-0e81d7e861f596fac",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "a1037ea36ed9df",
            "monitoring": false,
            "outpost_arn": "arn:aws:module:us-east-1:123456789012:90e2fdb99d42",
            "placement_group_id": "cd14ab86d28a39",
            "placement_partition_number": 0,
            "primary_network_interface_id": "39ef618db8a4bb",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "f1ef6b4813326c",
            "subnet_id": "subnet-0c74f3a72c22d5fd8",
            "tags": {
              "Name": "modular-app-0"
            },
            "tags_all": {
              "Name": "modular-app-0"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088868b4457a8be46"
            ]
          },
          "index_key": 0
        },
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0c101f26f147fa7fd",
            "arn": "arn:aws:instance:us-east-1:123456789012:instance/i-0806823922e1aa379",
            "associate_public_ip_address": false,
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enable_primary_ipv6": false,
            "force_destroy": false,
            "get_password_data": false,
            "host_id": "02959a1df22ba8",
            "host_resource_group_arn": "arn:aws:module:us-east-1:123456789012:caa90aee8c70",
            "id": "i-0806823922e1aa379",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "79d512d8838d0f",
            "monitoring": false,
            "outpost_arn": "arn:aws:module:us-east-1:123456789012:c19b15b4dd1b",
            "placement_group_id": "da7d3f3c1b7015",
            "placement_partition_number": 0,
            "primary_network_interface_id": "b709b9d46faff6",
            "region": "us-east-1",
            "source_dest_check": true,
            "spot_instance_request_id": "4cd93e19084c98",
            "subnet_id": "subnet-002a8e63966e4b129",
            "tags": {
              "Name": "modular-app-1"
            },
            "tags_all": {
              "Name": "modular-app-1"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-088868b4457a8be46"
            ]
          },
          "index_key": 1
        }
      ],
      "module": "module.app",
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:security:us-east-1:123456789012:security_group/sg-088868b4457a8be46",
            "description": "Application tier",
            "egress": [],
            "id": "sg-088868b4457a8be46",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.40.0.0/16"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "modular-app",
            "name_prefix": null,
            "owner_id": "f90958f71e8cec",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "modular-app"
            },
            "tags_all": {
              "Name": "modular-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c47952462618884"
          },
          "sensitive_attributes": []
        }
      ],
      "module": "module.app"
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "d2c7cc60a2798d",
            "arn": "arn:aws:eip:us-east-1:123456789012:eip/eipalloc-0283b8be9593f4c1d",
            "association_id": "616cf3b2c45c6a",
            "domain": "vpc",
            "id": "eipalloc-0283b8be9593f4c1d",
            "ipam_pool_id": "962c749f0c23d4",
            "region": "us-east-1",
            "tags": {
              "Name": "modular-nat"
            },
            "tags_all": {
              "Name": "modular-nat"
            }
          }
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:internet:us-east-1:123456789012:internet_gateway/igw-09ae168c2d97f8e97",
            "id": "igw-09ae168c2d97f8e97",
            "owner_id": "275aa3a577857c",
            "region": "us-east-1",
            "tags": {
              "Name": "modular"
            },
            "tags_all": {
              "Name": "modular"
            },
            "vpc_id": "vpc-08c47952462618884"
          }
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0283b8be9593f4c1d",
            "association_id": "a69649d2d0bd24",
            "connectivity_type": "public",
            "id": "nat-0c6af31d9a02ef583",
            "network_interface_id": "0def51f5189a75",
            "region": "us-east-1",
            "route_table_id": "c42276ef289ca5",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a38b7df503fdd025",
            "tags": {
              "Name": "modular-nat"
            },
            "tags_all": {
              "Name": "modular-nat"
            },
            "vpc_id": "bb78c2bc75eb19"
          }
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": null,
            "id": "8fcc667a48cf66f55cfc",
            "instance_id": "6cde4f848afbfb",
            "instance_owner_id": "c6a2f4e6a156d5",
            "local_gateway_id": null,
            "nat_gateway_id": "nat-0c6af31d9a02ef583",
            "network_interface_id": "5d276a3eb7230e",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0e0270fd3cf8bc6ee",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": []
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": null,
            "core_network_arn": null,
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "egress_only_gateway_id": null,
            "gateway_id": "igw-09ae168c2d97f8e97",
            "id": "9a7581b0f04220d9c9db",
            "instance_id": "7fa2acc42b27df",
            "instance_owner_id": "f5de369047d785",
            "local_gateway_id": null,
            "nat_gateway_id": null,
            "network_interface_id": "0796640ef95601",
            "odb_network_arn": null,
            "origin": null,
            "region": "us-east-1",
            "route_table_id": "rtb-080420109cd48dd1c",
            "state": null,
            "timeouts": null,
            "transit_gateway_id": null,
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": null
          },
          "sensitive_attributes": []
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-0e0270fd3cf8bc6ee",
            "id": "rtb-0e0270fd3cf8bc6ee",
            "owner_id": "0bac5313ab3eb6",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "modular-private"
            },
            "tags_all": {
              "Name": "modular-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c47952462618884"
          },
          "sensitive_attributes": []
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:route:us-east-1:123456789012:route_table/rtb-080420109cd48dd1c",
            "id": "rtb-080420109cd48dd1c",
            "owner_id": "93a1848e817584",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [],
            "tags": {
              "Name": "modular-public"
            },
            "tags_all": {
              "Name": "modular-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08c47952462618884"
          },
          "sensitive_attributes": []
        }
      ],
      "module": "module.network"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dfda4dbb10d963c5",
            "region": "us-east-1",
            "route_table_id": "rtb-0e0270fd3cf8bc6ee",
            "subnet_id": "subnet-0c74f3a72c22d5fd8"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0250745053f0e6553",
            "region": "us-east-1",
            "route_table_id": "rtb-0e0270fd3cf8bc6ee",
            "subnet_id": "subnet-002a8e63966e4b129"
          },
          "index_key": 1
        }
      ],
      "module": "module.network",
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0989ba7d5115b9d9e",
            "region": "us-east-1",
            "route_table_id": "rtb-080420109cd48dd1c",
            "subnet_id": "subnet-0a38b7df503fdd025"
          },
          "index_key": 0
        },
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-077ada80d0b686270",
            "region": "us-east-1",
            "route_table_id": "rtb-080420109cd48dd1c",
            "subnet_id": "subnet-0a15f306daa201513"
          },
          "index_key": 1
        }
      ],
      "module": "module.network",
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0c74f3a72c22d5fd8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "ee2fd27ec0b1cc",
            "cidr_block": "10.40.100.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c74f3a72c22d5fd8",
            "ipv6_cidr_block_association_id": "6dc282210e1b4a",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "5f29641e9fadf3",
            "region": "us-east-1",
            "tags": {
              "Name": "modular-private-us-east-1a"
            },
            "tags_all": {
              "Name": "modular-private-us-east-1a"
            },
            "vpc_id": "vpc-08c47952462618884"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-002a8e63966e4b129",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "f40b124b523156",
            "cidr_block": "10.40.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-002a8e63966e4b129",
            "ipv6_cidr_block_association_id": "a86427c54a4f25",
            "ipv6_native": false,
            "map_public_ip_on_launch": false,
            "owner_id": "614a33a81c5e35",
            "region": "us-east-1",
            "tags": {
              "Name": "modular-private-us-east-1b"
            },
            "tags_all": {
              "Name": "modular-private-us-east-1b"
            },
            "vpc_id": "vpc-08c47952462618884"
          },
          "index_key": 1
        }
      ],
      "module": "module.network",
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0a38b7df503fdd025",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "a32a43eabc9866",
            "cidr_block": "10.40.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a38b7df503fdd025",
            "ipv6_cidr_block_association_id": "524b76457a2f27",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "owner_id": "ae4cce484b9d8d",
            "region": "us-east-1",
            "tags": {
              "Name": "modular-public-us-east-1a"
            },
            "tags_all": {
              "Name": "modular-public-us-east-1a"
            },
            "vpc_id": "vpc-08c47952462618884"
          },
          "index_key": 0
        },
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:subnet:us-east-1:123456789012:subnet/subnet-0a15f306daa201513",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "49cfa70c76bd75",
            "cidr_block": "10.40.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a15f306daa201513",
            "ipv6_cidr_block_association_id": "45e039a70cd85d",
            "ipv6_native": false,
            "map_public_ip_on_launch": true,
            "owner_id": "3aefe7369dac4a",
            "region": "us-east-1",
            "tags": {
              "Name": "modular-public-us-east-1b"
            },
            "tags_all": {
              "Name": "modular-public-us-east-1b"
            },
            "vpc_id": "vpc-08c47952462618884"
          },
          "index_key": 1
        }
      ],
      "module": "module.network",
      "each": "list"
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:vpc:us-east-1:123456789012:vpc/vpc-08c47952462618884",
            "cidr_block": "10.40.0.0/16",
            "default_network_acl_id": "24aa6fedba375a",
            "default_route_table_id": "469b3ba20a0571",
            "default_security_group_id": "26be1e1ca828bb",
            "dhcp_options_id": "91f578557f8222",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08c47952462618884",
            "instance_tenancy": "default",
            "ipv6_association_id": "f6da991dc58efa",
            "main_route_table_id": "227607e661a981",
            "owner_id": "8d6c0d689261b7",
            "region": "us-east-1",
            "tags": {
              "Name": "modular"
            },
            "tags_all": {
              "Name": "modular"
            }
          }
        }
      ],
      "module": "module.network"
    }
  ]
}